Project landing page

--- a/index.html
+++ b/index.html
@@ -61,10 +61,13 @@
       <div>
         <!-- Add a call to action box with a sign up button -->
         <div class="call-to-action">
+          <div class="cta-left">
           <h3>Call to action! It's time!</h3>
           <p>Sign up for our product by clinking that button right over there!</p>
+          </div>
           <button>Sign up</button>
       </div>
+    </div>
     </div>
     <div class="footer">
       Copyright (c) The Odin Project 2021
